# diamond-price-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.dvc/: config
.github/workflows/: ci.yaml
airflow/dags/: training_pipeline.py
artifacts/: .gitignore  model.pkl  model.pkl.dvc  preprocessor.pkl  preprocessor.pkl.dvc  test.csv  test.csv.dvc  train.csv.dvc
experiments/: experiments.ipynb
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/components/artifacts/: train.csv.dvc
src/exception/: exception.py
src/logger/: logger.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/pipeline/mlruns/0/: meta.yaml
src/pipeline/mlruns/0/bbb2ceac14c34106b7ae6ee27047ed38/: meta.yaml
src/pipeline/mlruns/0/bbb2ceac14c34106b7ae6ee27047ed38/artifacts/model/: MLmodel  (+3 more)
src/pipeline/mlruns/0/bbb2ceac14c34106b7ae6ee27047ed38/metrics/: mae  mse  r2_score
src/pipeline/mlruns/0/bbb2ceac14c34106b7ae6ee27047ed38/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
src/pipeline/mlruns/0/d10ae81fb0084dc8bf84b06cd533b09d/: meta.yaml
src/pipeline/mlruns/0/d10ae81fb0084dc8bf84b06cd533b09d/metrics/: mae  mse  r2_score
src/pipeline/mlruns/0/d10ae81fb0084dc8bf84b06cd533b09d/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
static/: styles.css
static/css/: styles.css
templates/: index.html  result.html
(+2 files in other folders)
