[metadata]
license = MIT
license_file = LICENSE

classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
python_requires = >=3.10

[options.package_data]
Diamond-Price-Prediction=py.typed

[flake8]
max-line-length = 180
exclude = __init__.py